--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,15 @@
-
+html {
+    /* To make use of full height of page*/
+    min-height: 100%;
+    margin: 0;
+}
+body {
+    min-height: 100%;
+    margin: 0;
+}
+::-webkit-scrollbar { 
+display: none; 
+}
 #header
 {
         width:15%;
